tests/firewall_it/fixtures/physical/iptables_mangle_v4.save
# Generated by iptables-save v1.8.13 (nf_tables) on Fri Oct  2 17:43:04 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KeenPbrTable - [0:0]
:KeenPbrTable_A - [0:0]
:KeenPbrTable_OUTPUT - [0:0]
-A PREROUTING -j KeenPbrTable
-A OUTPUT -j KeenPbrTable_OUTPUT
-A KeenPbrTable -j KeenPbrTable_A
-A KeenPbrTable_A -m conntrack --ctdir ORIGINAL -m connmark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -m conntrack --ctdir ORIGINAL -m mark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j RETURN
-A KeenPbrTable_A -m conntrack --ctstate DNAT -m comment --comment "kpbr:v1:prefilter.skip_established_or_dnat:5471913d40f7b3f7a06c6bc473b005f9" -j RETURN
-A KeenPbrTable_A -m mark ! --mark 0x0 -m comment --comment "kpbr:v1:prefilter.skip_marked_packets:1ccccb565711f69789e5aaea40026738" -j ACCEPT
-A KeenPbrTable_A ! -i lan0 -m comment --comment "kpbr:v1:prefilter.inbound_interface_filter:8162b5ecab9ca5e73deaf622224213dd" -j RETURN
-A KeenPbrTable_A -p tcp -m set --match-set kpbr4s_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrTable_A -p tcp -m set --match-set kpbr4s_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -p tcp -m set --match-set kpbr4s_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j RETURN
-A KeenPbrTable_A ! -s 10.0.0.0/8 -p udp -m set --match-set kpbr4s_hybrid dst -m udp --dport 53 -m comment --comment "kpbr:v1:route.drop:ecc69e963ee0c72b1e6f0c1ac985e8cc" -j DROP
-A KeenPbrTable_A -d 8.8.8.8/32 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrTable_A -d 9.9.9.9/32 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrTable_A -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrTable_A -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrTable_A -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrTable_A -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrTable_A -s 192.168.1.0/24 -p tcp -m tcp ! --dport 443 -m comment --comment "kpbr:v1:route.drop:eb7bbbea566738a6420a41405f3dbcd4" -j DROP
-A KeenPbrTable_A -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrTable_A -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j RETURN
-A KeenPbrTable_A -s 192.0.2.0/24 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrTable_A -s 192.0.2.0/24 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -s 192.0.2.0/24 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j RETURN
-A KeenPbrTable_A -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrTable_A -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j RETURN
-A KeenPbrTable_A -m set --match-set kpbr4d_routed dst -m comment --comment "kpbr:v1:route.mark:cddcb8d7569e0d14efd45c34b081d542" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrTable_A -m set --match-set kpbr4d_routed dst -m comment --comment "kpbr:v1:route.mark:cddcb8d7569e0d14efd45c34b081d542" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -m set --match-set kpbr4d_routed dst -m comment --comment "kpbr:v1:route.mark:cddcb8d7569e0d14efd45c34b081d542" -j RETURN
-A KeenPbrTable_A -m set --match-set kpbr4s_hybrid dst -m comment --comment "kpbr:v1:route.drop:47c7580b6e3b5b208ce412ca875c3b1b" -j DROP
-A KeenPbrTable_OUTPUT -j KeenPbrTable_A
COMMIT
# Completed on Fri Oct  2 17:43:04 2026
