tests/firewall_it/fixtures/physical/iptables_mangle_v6.save
# Generated by ip6tables-save v1.8.13 (nf_tables) on Sat Oct  3 00:20:40 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KeenPbrOutput - [0:0]
:KeenPbrTable - [0:0]
-A PREROUTING -j KeenPbrTable
-A OUTPUT -j KeenPbrOutput
-A KeenPbrOutput -m conntrack --ctdir ORIGINAL -m connmark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -m conntrack --ctdir ORIGINAL -m mark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j RETURN
-A KeenPbrOutput -m conntrack --ctdir REPLY -m comment --comment "kpbr:v1:prefilter.skip_local_replies:7257c668d9bf18a9c15001249e18c1ef" -j RETURN
-A KeenPbrOutput -m conntrack --ctstate DNAT -m comment --comment "kpbr:v1:prefilter.skip_established_or_dnat:5471913d40f7b3f7a06c6bc473b005f9" -j RETURN
-A KeenPbrOutput -m mark ! --mark 0x0 -m comment --comment "kpbr:v1:prefilter.skip_marked_packets:1ccccb565711f69789e5aaea40026738" -j ACCEPT
-A KeenPbrOutput -p tcp -m set --match-set kpbr6_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:a1e906a68b81169ee48b0b7115422956" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrOutput -p tcp -m set --match-set kpbr6_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:a1e906a68b81169ee48b0b7115422956" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -p tcp -m set --match-set kpbr6_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:a1e906a68b81169ee48b0b7115422956" -j RETURN
-A KeenPbrOutput -d 2001:db8:53::53/128 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.mark:2d4bc94200ea2daa37bd91553cf71cb8" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrOutput -d 2001:db8:53::53/128 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.mark:2d4bc94200ea2daa37bd91553cf71cb8" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -d 2001:db8:53::53/128 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.mark:2d4bc94200ea2daa37bd91553cf71cb8" -j RETURN
-A KeenPbrTable -m conntrack --ctdir ORIGINAL -m connmark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable -m conntrack --ctdir ORIGINAL -m mark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j RETURN
-A KeenPbrTable -m conntrack --ctstate DNAT -m comment --comment "kpbr:v1:prefilter.skip_established_or_dnat:5471913d40f7b3f7a06c6bc473b005f9" -j RETURN
-A KeenPbrTable -m mark ! --mark 0x0 -m comment --comment "kpbr:v1:prefilter.skip_marked_packets:1ccccb565711f69789e5aaea40026738" -j ACCEPT
-A KeenPbrTable ! -i lan0 -m comment --comment "kpbr:v1:prefilter.inbound_interface_filter:8162b5ecab9ca5e73deaf622224213dd" -j RETURN
-A KeenPbrTable -p tcp -m set --match-set kpbr6_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:a1e906a68b81169ee48b0b7115422956" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrTable -p tcp -m set --match-set kpbr6_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:a1e906a68b81169ee48b0b7115422956" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable -p tcp -m set --match-set kpbr6_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:a1e906a68b81169ee48b0b7115422956" -j RETURN
-A KeenPbrTable -d 2001:db8:53::53/128 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.mark:2d4bc94200ea2daa37bd91553cf71cb8" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrTable -d 2001:db8:53::53/128 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.mark:2d4bc94200ea2daa37bd91553cf71cb8" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable -d 2001:db8:53::53/128 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.mark:2d4bc94200ea2daa37bd91553cf71cb8" -j RETURN
COMMIT
# Completed on Sat Oct  3 00:20:40 2026
