tests/firewall_it/fixtures/physical/iptables_misc_v4.save
# Generated by iptables-save v1.8.13 (nf_tables) on Fri Oct  2 23:12:13 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KeenPbrOutput - [0:0]
:KeenPbrTable - [0:0]
-A PREROUTING -j KeenPbrTable
-A PREROUTING -j KeenPbrTable
-A PREROUTING -i eth0 -j ACCEPT
-A INPUT -j KeenPbrOutput
-A KeenPbrTable -j MARK --set-xmark 0x10/0xffffffff
-A KeenPbrTable -j MARK --set-xmark 0x10/0xff
-A KeenPbrTable -m mark ! --mark 0x0 -j ACCEPT
-A KeenPbrTable -m mark --mark 0x5 -j ACCEPT
-A KeenPbrTable -m dscp --dscp 0x0a -j RETURN
-A KeenPbrTable -m dscp --dscp 0x0a -j RETURN
-A KeenPbrTable -p tcp -m tcp --dport 80 -j RETURN
-A KeenPbrTable -p udp -m multiport ! --dports 53,80:90 -j RETURN
-A KeenPbrTable -m conntrack --ctdir ORIGINAL -m connmark ! --mark 0x0/0xff0000 -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable -j CONNMARK --save-mark --nfmask 0xff --ctmask 0xf
-A KeenPbrTable -p udp -m comment --comment "kpbr:v1:a.b:c d" -j RETURN
-A KeenPbrTable -m comment --comment "kpbr:v1:route.mark:abc" -j RETURN
-A KeenPbrTable -m comment --comment "kpbr:v9:route.mark:abc" -j RETURN
-A KeenPbrTable -m limit --limit 1/sec -j RETURN
-A KeenPbrTable -o eth9 -j LOG
-A KeenPbrTable -g KeenPbrOutput
-A KeenPbrTable -f -j DROP
-A KeenPbrTable -s 1.2.3.4/32 ! -d 10.0.0.0/8 -j RETURN
-A KeenPbrTable -s 10.0.0.0/8 -j RETURN
-A KeenPbrTable -s 192.168.0.0/16 -j RETURN
COMMIT
# Completed on Fri Oct  2 23:12:13 2026
