tests/firewall_it/fixtures/physical/iptables_misc_v6.save
# Generated by ip6tables-save v1.8.13 (nf_tables) on Fri Oct  2 17:43:05 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KeenPbrTable_A - [0:0]
:KeenPbrTable_B - [0:0]
-A PREROUTING -j KeenPbrTable_A
-A PREROUTING -j KeenPbrTable_A
-A PREROUTING -i eth0 -j ACCEPT
-A INPUT -j KeenPbrTable_B
-A KeenPbrTable_A -j MARK --set-xmark 0x10/0xffffffff
-A KeenPbrTable_A -j MARK --set-xmark 0x10/0xff
-A KeenPbrTable_A -m mark ! --mark 0x0 -j ACCEPT
-A KeenPbrTable_A -m mark --mark 0x5 -j ACCEPT
-A KeenPbrTable_A -m dscp --dscp 0x0a -j RETURN
-A KeenPbrTable_A -m dscp --dscp 0x0a -j RETURN
-A KeenPbrTable_A -p tcp -m tcp --dport 80 -j RETURN
-A KeenPbrTable_A -p udp -m multiport ! --dports 53,80:90 -j RETURN
-A KeenPbrTable_A -m conntrack --ctdir ORIGINAL -m connmark ! --mark 0x0/0xff0000 -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrTable_A -j CONNMARK --save-mark --nfmask 0xff --ctmask 0xf
-A KeenPbrTable_A -p udp -m comment --comment "kpbr:v1:a.b:c d" -j RETURN
-A KeenPbrTable_A -m comment --comment "kpbr:v1:route.mark:abc" -j RETURN
-A KeenPbrTable_A -m comment --comment "kpbr:v9:route.mark:abc" -j RETURN
-A KeenPbrTable_A -m limit --limit 1/sec -j RETURN
-A KeenPbrTable_A -o eth9 -j LOG
-A KeenPbrTable_A -g KeenPbrTable_B
-A KeenPbrTable_A -s 2001:db8::1/128 -d 2001:db8::/64 -p udp -m udp --dport 53 -j RETURN
COMMIT
# Completed on Fri Oct  2 17:43:05 2026
