tests/firewall_it/fixtures/physical/iptables_raw_v4.save
# Generated by iptables-save v1.8.13 (nf_tables) on Sat Oct  3 00:20:41 2026
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:KeenPbrRaw - [0:0]
-A PREROUTING -j KeenPbrRaw
-A KeenPbrRaw -m mark ! --mark 0x0 -m comment --comment "kpbr:v1:prefilter.skip_marked_packets:1ccccb565711f69789e5aaea40026738" -j ACCEPT
-A KeenPbrRaw -i lan0 -p tcp -m set --match-set kpbr4_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrRaw -i lan0 -p tcp -m set --match-set kpbr4_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j RETURN
-A KeenPbrRaw -i br-guest -p tcp -m set --match-set kpbr4_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrRaw -i br-guest -p tcp -m set --match-set kpbr4_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j RETURN
-A KeenPbrRaw ! -s 10.0.0.0/8 -i lan0 -p udp -m set --match-set kpbr4_hybrid dst -m udp --dport 53 -m comment --comment "kpbr:v1:route.drop:ecc69e963ee0c72b1e6f0c1ac985e8cc" -j DROP
-A KeenPbrRaw ! -s 10.0.0.0/8 -i br-guest -p udp -m set --match-set kpbr4_hybrid dst -m udp --dport 53 -m comment --comment "kpbr:v1:route.drop:ecc69e963ee0c72b1e6f0c1ac985e8cc" -j DROP
-A KeenPbrRaw -d 8.8.8.8/32 -i lan0 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrRaw -d 8.8.8.8/32 -i br-guest -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrRaw -d 9.9.9.9/32 -i lan0 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrRaw -d 9.9.9.9/32 -i br-guest -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrRaw -i lan0 -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrRaw -i lan0 -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrRaw -i br-guest -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrRaw -i br-guest -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrRaw -i lan0 -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrRaw -i lan0 -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrRaw -i br-guest -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrRaw -i br-guest -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrRaw -s 192.168.1.0/24 -i lan0 -p tcp -m tcp ! --dport 443 -m comment --comment "kpbr:v1:route.drop:eb7bbbea566738a6420a41405f3dbcd4" -j DROP
-A KeenPbrRaw -s 192.168.1.0/24 -i br-guest -p tcp -m tcp ! --dport 443 -m comment --comment "kpbr:v1:route.drop:eb7bbbea566738a6420a41405f3dbcd4" -j DROP
-A KeenPbrRaw -i lan0 -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrRaw -i lan0 -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j RETURN
-A KeenPbrRaw -i br-guest -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrRaw -i br-guest -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j RETURN
-A KeenPbrRaw -s 192.0.2.0/24 -i lan0 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrRaw -s 192.0.2.0/24 -i lan0 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j RETURN
-A KeenPbrRaw -s 192.0.2.0/24 -i br-guest -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrRaw -s 192.0.2.0/24 -i br-guest -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j RETURN
-A KeenPbrRaw -i lan0 -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrRaw -i lan0 -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j RETURN
-A KeenPbrRaw -i br-guest -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrRaw -i br-guest -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j RETURN
COMMIT
# Completed on Sat Oct  3 00:20:41 2026
# Generated by iptables-save v1.8.13 (nf_tables) on Sat Oct  3 00:20:41 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KeenPbrOutput - [0:0]
-A OUTPUT -j KeenPbrOutput
-A KeenPbrOutput -m conntrack --ctdir ORIGINAL -m connmark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -m conntrack --ctdir ORIGINAL -m mark ! --mark 0x0/0xff0000 -m comment --comment "kpbr:v1:prefilter.restore_conntrack_mark:9a8c6f9a29c8dccb68b5fc837b14b28a" -j RETURN
-A KeenPbrOutput -m conntrack --ctstate DNAT -m comment --comment "kpbr:v1:prefilter.skip_established_or_dnat:5471913d40f7b3f7a06c6bc473b005f9" -j RETURN
-A KeenPbrOutput -m mark ! --mark 0x0 -m comment --comment "kpbr:v1:prefilter.skip_marked_packets:1ccccb565711f69789e5aaea40026738" -j ACCEPT
-A KeenPbrOutput -p tcp -m set --match-set kpbr4_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrOutput -p tcp -m set --match-set kpbr4_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -p tcp -m set --match-set kpbr4_hybrid dst -m tcp --dport 443 -m comment --comment "kpbr:v1:route.mark:f07ef83f847846c4de79471f383975ed" -j RETURN
-A KeenPbrOutput ! -s 10.0.0.0/8 -p udp -m set --match-set kpbr4_hybrid dst -m udp --dport 53 -m comment --comment "kpbr:v1:route.drop:ecc69e963ee0c72b1e6f0c1ac985e8cc" -j DROP
-A KeenPbrOutput -d 8.8.8.8/32 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrOutput -d 9.9.9.9/32 -p udp -m udp --dport 53 -m comment --comment "kpbr:v1:route.pass:e3f0527ebeac6f9772a69111225cf3a6" -j RETURN
-A KeenPbrOutput -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrOutput -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -p tcp -m tcp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrOutput -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrOutput -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -p udp -m udp --sport 1111 -m comment --comment "kpbr:v1:route.mark:24affc9fd3cdfffe14572779355f1678" -j RETURN
-A KeenPbrOutput -s 192.168.1.0/24 -p tcp -m tcp ! --dport 443 -m comment --comment "kpbr:v1:route.drop:eb7bbbea566738a6420a41405f3dbcd4" -j DROP
-A KeenPbrOutput -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrOutput -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -p tcp -m dscp --dscp 0x2e -m multiport --dports 80,443,8000:9000 -m comment --comment "kpbr:v1:route.mark:cad10a85368f136efb032833e20c621f" -j RETURN
-A KeenPbrOutput -s 192.0.2.0/24 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrOutput -s 192.0.2.0/24 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -s 192.0.2.0/24 -m dscp --dscp 0x0a -m comment --comment "kpbr:v1:route.mark:55a87f5b6839858fabe6dd831888aa90" -j RETURN
-A KeenPbrOutput -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j MARK --set-xmark 0x20000/0xff0000
-A KeenPbrOutput -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -p tcp -m tcp --sport 1024:65535 --dport 22 -m comment --comment "kpbr:v1:route.mark:a543d3367252acc316c69ecc567e6bcf" -j RETURN
-A KeenPbrOutput -m set --match-set kpbr4d_routed dst -m comment --comment "kpbr:v1:route.mark:cddcb8d7569e0d14efd45c34b081d542" -j MARK --set-xmark 0x10000/0xff0000
-A KeenPbrOutput -m set --match-set kpbr4d_routed dst -m comment --comment "kpbr:v1:route.mark:cddcb8d7569e0d14efd45c34b081d542" -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
-A KeenPbrOutput -m set --match-set kpbr4d_routed dst -m comment --comment "kpbr:v1:route.mark:cddcb8d7569e0d14efd45c34b081d542" -j RETURN
-A KeenPbrOutput -m set --match-set kpbr4_hybrid dst -m comment --comment "kpbr:v1:route.drop:47c7580b6e3b5b208ce412ca875c3b1b" -j DROP
COMMIT
# Completed on Sat Oct  3 00:20:41 2026
