tests/firewall_it/fixtures/physical/nft_interval.json
{"nftables": [{"metainfo": {"version": "1.1.7", "release_name": "Commodore Bullmoose #8", "json_schema_version": 1}}, {"table": {"family": "inet", "name": "KeenPbrTable", "handle": 1}}, {"chain": {"family": "inet", "table": "KeenPbrTable", "name": "prerouting", "handle": 1, "type": "filter", "hook": "prerouting", "prio": -150, "policy": "accept"}}, {"rule": {"family": "inet", "table": "KeenPbrTable", "chain": "prerouting", "handle": 3, "expr": [{"match": {"op": "!=", "left": {"payload": {"protoc [...]
